# scr-financial-networks

./: .buildinfo  .gitignore  .zenodo.json  CITATION.cff  CODEOWNERS  LICENSE  README.MD  REPRODUCIBILITY.md  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
api/: abm.html  coarse_graining.html  dashboard.html  data.html  ml.html  network.html  risk.html  spectral.html  spectral_analysis.html  vae.html
dashboard/: __init__.py  api.py  app.py  data_api.py  data_loader.py  demo_data.py  gnn_export.py  llm.py  prediction.py  run.py  simulation_state.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst
examples/: black_week_simulation.html  black_week_simulation.py  network_visualization.html  network_visualization.py  vae_financial_features.py
experiments/: results.json  run_additional.py  run_all.py  run_binary_classification.py  run_comprehensive.py  run_edge_features.py  run_gb_walkforward.py  run_gnn_classification.py  run_gnn_graph_features.py  run_publication.py  run_regime_features.py  run_spectral_embedding.py  run_xgb_deep_features.py
paper/: main.tex  part1.tex  part2.tex  references.bib
scr_financial/: __init__.py
source/: scr_financial.data.collectors.html  scr_financial.html  scr_financial.network.html  scr_financial.vae.html
tests/: __init__.py  test_abm.py  test_coarse_graining.py  test_data_preprocessing.py  (+2 more)
(+198 files in other folders)
