[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scr-financial-networks"
version = "0.1.0"
description = "Spectral Coarse-Graining for Financial Networks"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Francois Petizon", email = "francois.petizon@kcl.ac.uk"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "networkx>=3.1.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
]

[project.urls]
"Homepage" = "https://github.com/username/scr-financial-networks"
"Bug Tracker" = "https://github.com/username/scr-financial-networks/issues"
"Documentation" = "https://scr-financial-networks.readthedocs.io/"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
